@@ -161,7 +161,7 @@ if (isset($error)) {
 // allowed 'srcfld*' parameter values for each 'srctbl' value
 $allowedSrcFields = array(
 	'users'					=> '"usergrpid", "alias", "userid"',
-	'triggers'				=> '"description", "triggerid"',
+	'triggers'				=> '"description", "triggerid", "expression"',
 	'items'					=> '"itemid", "name"',
 	'prototypes'			=> '"itemid", "name", "flags"',
 	'graphs'				=> '"graphid", "name"',
@@ -248,8 +248,10 @@ check_fields($fields);
 $dstfrm = get_request('dstfrm', ''); // destination form
 $dstfld1 = get_request('dstfld1', ''); // output field on destination form
 $dstfld2 = get_request('dstfld2', ''); // second output field on destination form
+$dstfld3 = get_request('dstfld3', ''); // third output field on destination form
 $srcfld1 = get_request('srcfld1', ''); // source table field [can be different from fields of source table]
 $srcfld2 = get_request('srcfld2', null); // second source table field [can be different from fields of source table]
+$srcfld3 = get_request('srcfld3', null); //  source table field [can be different from fields of source table]
 $multiselect = get_request('multiselect', 0); // if create popup with checkboxes
 $dstact = get_request('dstact', '');
 $writeonly = get_request('writeonly');
@@ -516,9 +518,11 @@ else {
 		if (zbx_empty($noempty)) {
 			$value1 = isset($_REQUEST['dstfld1']) && zbx_strpos($_REQUEST['dstfld1'], 'id') !== false ? 0 : '';
 			$value2 = isset($_REQUEST['dstfld2']) && zbx_strpos($_REQUEST['dstfld2'], 'id') !== false ? 0 : '';
+			$value3 = isset($_REQUEST['dstfld3']) && zbx_strpos($_REQUEST['dstfld3'], 'id') !== false ? 0 : '';
 
 			$epmtyScript = get_window_opener($dstfrm, $dstfld1, $value1);
 			$epmtyScript .= get_window_opener($dstfrm, $dstfld2, $value2);
+			$epmtyScript .= get_window_opener($dstfrm, $dstfld3, $value3);
 			$epmtyScript .= ' close_window(); return false;';
 
 			$frmTitle->addItem(array(SPACE, new CButton('empty', _('Empty'), $epmtyScript)));
@@ -1011,7 +1015,8 @@ elseif ($srctbl == 'triggers') {
 		else {
 			$values = array(
 				$dstfld1 => $trigger[$srcfld1],
-				$dstfld2 => $trigger[$srcfld2]
+				$dstfld2 => $trigger[$srcfld2],
+				$dstfld3 => $trigger[$srcfld3]
 			);
 			$js_action = 'addValues('.zbx_jsvalue($dstfrm).', '.zbx_jsvalue($values).'); return false;';
 		}
