@@ -10,6 +10,10 @@ New features:
 ..F....... [ZBX-5127] regular expressions form redesign (Vedmak)
 
 Bug fixes:
+..F....... [ZBX-5280] fixed functional macros for newly created items returning 0 instead of 'no data' (Toms)
+..F....... [ZBX-5280] fixed HOST.DNS macro priorities if only JMX and IPMI interfaces are used in host (Toms)
+..F....... [ZBX-5280] fixed HOST.DNS macro did not used default DNS from host interface configuration (Toms)
+..F....... [ZBX-5280] fixed in map labels not expanding positional macros like HOST.HOST1 for trigger items (Toms)
 A......... [ZBX-4097] changed the "application", "host" and "group" parameters for item.get, trigger.get and triggerprototype.get to be case sensitive (Pavels)
 A.F....... [ZBX-1946] fixed being able to create screen items with spans exceeding the size of the screen (Pavels)
 A.F....... [ZBX-5619] Fixed errors when importing a template with an empty screen (Oleg)
